[package]
name = "kubeinit"
version = "0.1.0"
edition = "2024"
description = "Initialize and manage vanilla Kubernetes clusters using kubeadm with Cilium CNI"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
toml = "0.8"
